<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <!-- Drag Handle -->
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="28dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.SmallComponent" />

        <!-- Title -->
        <TextView
            android:id="@+id/completetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/lexend"
            android:text="@string/completeBtmWelcome"
            android:textColor="@color/text_primary"
            android:textSize="25sp" />

        <!-- Illustration -->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:rotation="-14"
            android:translationX="15dp"
            app:lottie_rawRes="@raw/profilesetup"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/completesubtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/completetxt"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lexend"
            android:text="@string/completeBtmSubtxt"
            android:textColor="@color/text_primary"
            android:textSize="14sp" />

        <View
            android:id="@+id/div1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/lottie"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:background="@color/gray" />

        <!-- PHONE -->
        <TextView
            android:id="@+id/EnterPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/div1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EnterPhone"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="8dp"
            android:hint="@string/formphone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- UNIVERSITY -->
        <TextView
            android:id="@+id/EnterUni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/university"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uniLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EnterUni"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="8dp"
            android:hint="@string/formuniversity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uniTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- COLLEGE -->
        <TextView
            android:id="@+id/EnterCollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uniLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/college"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/collegeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EnterCollege"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="8dp"
            android:hint="@string/formcollege">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/collegeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- COURSE -->
        <TextView
            android:id="@+id/EnterCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/collegeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/course"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/courseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EnterCourse"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="8dp"
            android:hint="@string/formcourse">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/courseTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/div2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/courseLayout"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/gray" />

        <!-- BUTTONS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/div2"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/custom_btn"
                android:text="@string/confirm"
                android:layout_margin="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/Progress"
            android:layout_width="40dp"
            android:textAllCaps="false"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progressbar" />

    </RelativeLayout>

</ScrollView>
