<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/Logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/ContentDescriptionApplogo"
                    android:layout_centerHorizontal="true"
                    />

                <ImageView
                    android:id="@+id/journeyIllustration"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:contentDescription="@string/Illustration"
                    android:elevation="10dp"
                    android:src="@drawable/journey"
                    android:translationX="15dp"
                    android:translationY="-20dp"
                    android:rotation="-10"
                    />

                <TextView
                    android:id="@+id/welcometxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend"
                    android:layout_below="@id/Logo"
                    android:textColor="@color/text_primary"
                    android:textSize="21sp"
                    android:text="@string/LoginMain"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/welcomesubtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend"
                    android:layout_below="@id/welcometxt"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/text_primary"
                    android:textSize="14sp"
                    android:text="@string/secondTag"
                    android:layout_marginBottom="10dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Loginbtn"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_below="@id/welcomesubtxt"
                    android:layout_centerHorizontal="true"
                    android:text="@string/LoginBtn"
                    android:background="@drawable/custom_btn"
                    android:textColor="@color/text_primary"
                    android:layout_marginBottom="10dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signupBtn"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_below="@id/Loginbtn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/SignupBtn"
                    android:background="@drawable/custom_btn"
                    android:textColor="@color/text_primary"
                    android:layout_marginBottom="20dp"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>
