<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/headerSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:contentDescription="Back"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/left" />

        <TextView
            android:id="@+id/mainhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:text="@string/notes"
            android:layout_below="@id/back"
            android:textColor="@color/text_primary"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainhead"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lexend"
            android:text="@string/notes_tagline"
            android:textColor="@color/text_primary"
            android:textSize="15sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:rotation="-6"
            android:translationY="-10dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/notespreview" />

    </RelativeLayout>

    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/headerSection"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/div1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/googlesans"
        android:text="@string/no_notes_stored"
        android:textColor="@color/text_primary"
        android:textSize="15sp"
        android:visibility="gone" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Lottie2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_below="@id/state"
        android:layout_centerHorizontal="true"
        android:translationY="-10dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/div1"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:paddingBottom="90dp"
        android:visibility="gone" />

    <!-- Floating Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNotesFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/addnotes"
        android:src="@drawable/add" />

</RelativeLayout>
